// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiRequest debugging should debug error responses 1`] = `
{
  "data": {},
  "endpoint": "https://httpbin.org/status/400",
  "headers": {
    "Baz": "Qux",
  },
  "method": "GET",
  "options": {},
  "params": {
    "foo": "bar",
  },
  "response": {
    "data": "",
    "headers": {
      "access-control-allow-credentials": "true",
      "access-control-allow-origin": "*",
      "connection": "keep-alive",
      "content-length": "0",
      "content-type": "text/html; charset=utf-8",
      "date": Any<String>,
      "server": Any<String>,
    },
    "status": 400,
    "statusText": "BAD REQUEST",
  },
}
`;

exports[`ApiRequest debugging should debug successful responses 1`] = `
{
  "data": {},
  "endpoint": "https://httpbin.org/get",
  "headers": {
    "Baz": "Qux",
  },
  "method": "GET",
  "options": {},
  "params": {
    "foo": "bar",
  },
  "response": {
    "data": {
      "args": {
        "foo": "bar",
      },
      "headers": {
        "Accept": "*/*",
        "Accept-Encoding": "br, gzip, deflate",
        "Accept-Language": "*",
        "Baz": "Qux",
        "Host": "httpbin.org",
        "Sec-Fetch-Mode": "cors",
        "User-Agent": Any<String>,
        "X-Amzn-Trace-Id": Any<String>,
      },
      "origin": Any<String>,
      "url": "https://httpbin.org/get?foo=bar",
    },
    "headers": {
      "access-control-allow-credentials": "true",
      "access-control-allow-origin": "*",
      "connection": "keep-alive",
      "content-length": Any<String>,
      "content-type": "application/json",
      "date": Any<String>,
      "server": Any<String>,
    },
    "status": 200,
    "statusText": "OK",
  },
}
`;

exports[`ApiService debugging should debug error responses 1`] = `
{
  "data": "",
  "errorMessage": "HTTP 500 INTERNAL SERVER ERROR",
  "headers": {
    "access-control-allow-credentials": "true",
    "access-control-allow-origin": "*",
    "connection": "keep-alive",
    "content-length": "0",
    "content-type": "text/html; charset=utf-8",
    "date": Any<String>,
    "server": Any<String>,
  },
  "request": {
    "data": {},
    "endpoint": "https://httpbin.org/status/500",
    "headers": {
      "b": "2",
    },
    "method": "GET",
    "options": {},
    "params": {
      "a": "1",
    },
  },
  "status": 500,
  "statusText": "INTERNAL SERVER ERROR",
}
`;

exports[`ApiService debugging should debug successful responses 1`] = `
{
  "data": "",
  "headers": {
    "access-control-allow-credentials": "true",
    "access-control-allow-origin": "*",
    "connection": "keep-alive",
    "content-type": "text/html; charset=utf-8",
    "date": Any<String>,
    "server": Any<String>,
  },
  "request": {
    "data": {
      "foo": "bar",
    },
    "endpoint": "https://httpbin.org/status/204",
    "headers": {
      "Baz": "Qux",
    },
    "method": "POST",
    "options": {},
    "params": {},
  },
  "status": 204,
  "statusText": "NO CONTENT",
}
`;
